# forward_webmail

./: .gitignore  Cargo.toml  README.md  app_data.json  flake.nix  setting.example.toml
src/: lib.rs  mail_client.rs  main.rs  send_mail.rs  settings.rs  webmail.rs
